--- a/src/flavors/default2/static/css/promote.styl
+++ b/src/flavors/default2/static/css/promote.styl
@@ -1,6 +1,12 @@
 .promotion
-  float none
+  float right
+  min-width 150px
   margin-left 0
+
+.place-list
+
+  .promotion
+    float right
 
 .user-support
   background-image none
