--- a/src/flavors/default2/static/css/sidebar.styl
+++ b/src/flavors/default2/static/css/sidebar.styl
@@ -54,6 +54,7 @@
 
 a.close-btn
 	z-index 1
+	color black
 	background white
 	box-shadow none
 	right 100%
@@ -63,6 +64,7 @@ a.close-btn
 
 	+below(60em)
 		width 60px
+		box-shadow 0px -4px 8px -4px rgba(black, 0.2)
 
 	&:hover
 		background white
